--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       align-items: center;
       font-size: 48px;
       color: #333333;
+     background-image:url();
+      background-size:contain;
+background-repeat:no-repeat;
     }
     h1 {
       font-size: 24px;
