--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       align-items: center;
       font-size: 48px;
       color: #333333;
-     background-image:url();
+     background-image:url("https://github.com/anandvip/vipulAnand/blob/main/Sqr-va-logo.png?raw=true");
       background-size:contain;
 background-repeat:no-repeat;
     }
