--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ background-repeat:no-repeat;
     <p>Freelance Web Developer</p>
     <p>Living in Kurukshetra</p>
     <p>Contact: 9896918475</p>
-    <p>Email: V@gmail.com</p>
+    <p>Email: 9896918475V@gmail.com</p>
   </div>
 </body>
 </html>
