--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ background-repeat:no-repeat;
 <body>
   <div class="container">
     <div class="logo">VA</div>
-    <h1>Vippul Anand</h1>
+    <h1>Vipul Anand</h1>
     <p>Freelance Web Developer</p>
     <p>Living in Kurukshetra</p>
     <p>Contact: 9896918475</p>
