--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ background-repeat:no-repeat;
 </head>
 <body>
   <div class="container">
-    <div class="logo">VA</div>
+    <div class="logo"></div>
     <h1>Vipul Anand</h1>
     <p>Freelance Web Developer</p>
     <p>Living in Kurukshetra</p>
