--- a/index.html
+++ b/index.html
@@ -1,60 +1,172 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vipul Anand - Freelance Web Developer</title>
+  <title>Vipul Anand - Business Card with Corner Color Shifts</title>
   <style>
+    @font-face {
+      font-family: "Mona Sans";
+      src: url("https://assets.codepen.io/64/Mona-Sans.woff2") format("woff2 supports variations"),
+           url("https://assets.codepen.io/64/Mona-Sans.woff2") format("woff2-variations");
+      font-weight: 100 1000;
+    }
+
+    :root {
+      --card-color: hsl(260deg 10% 5%);
+      --text-color: hsl(260deg 10% 90%);
+      --card-radius: 16px;
+      --card-width: 350px;
+      --card-height: 220px;
+      --animation-speed: 8s;
+      --highlight-width: 25%;
+      --color-1: rgba(255, 0, 128, 0.8);  /* Pink */
+      --color-2: rgba(0, 255, 255, 0.8);  /* Cyan */
+      --color-3: rgba(255, 255, 0, 0.8);  /* Yellow */
+      --color-4: rgba(128, 0, 255, 0.8);  /* Purple */
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      background-color: black;
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
+      font-family: "Mona Sans", sans-serif;
       height: 100vh;
       margin: 0;
+      overflow: hidden;
     }
-    .container {
-      text-align: center;
-      background-color: #ffffff;
-      padding: 40px;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      max-width: 400px;
+
+    .card-container {
+      width: var(--card-width);
+      height: var(--card-height);
+      position: relative;
+      border-radius: var(--card-radius);
     }
-    .logo {
-      width: 100px;
-      height: 100px;
-      background-color: #e0e0e0;
-      border-radius: 50%;
-      margin: 0 auto 20px;
+
+    .edge-highlight {
+      position: absolute;
+      top: -2px;
+      left: -2px;
+      right: -2px;
+      bottom: -2px;
+      border-radius: var(--card-radius);
+      overflow: hidden;
+    }
+
+    .edge-highlight::before {
+      content: "";
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: conic-gradient(
+        from 0deg at 50% 50%,
+        var(--color-1) 0deg,
+        var(--color-2) 90deg,
+        var(--color-3) 180deg,
+        var(--color-4) 270deg,
+        var(--color-1) 360deg
+      );
+      animation: rotate var(--animation-speed) linear infinite;
+      opacity: 0.7;
+    }
+
+    .edge-highlight::after {
+      content: "";
+      position: absolute;
+      inset: 2px;
+      background: var(--card-color);
+      border-radius: calc(var(--card-radius) - 2px);
+    }
+
+    .traveling-highlight {
+      position: absolute;
+      top: -2px;
+      left: -2px;
+      right: -2px;
+      bottom: -2px;
+      border-radius: var(--card-radius);
+      overflow: hidden;
+    }
+
+    .traveling-highlight::before {
+      content: "";
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: conic-gradient(
+        transparent,
+        transparent 25%,
+        rgba(255, 255, 255, 0.3) 25%,
+        rgba(255, 255, 255, 0.3) 50%,
+        transparent 50%,
+        transparent 75%,
+        rgba(255, 255, 255, 0.3) 75%
+      );
+      animation: rotate var(--animation-speed) linear infinite;
+    }
+
+    .card {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      background: var(--card-color);
+      border-radius: var(--card-radius);
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      font-size: 48px;
-      color: #333333;
-     background-image:url("https://github.com/anandvip/vipulAnand/blob/main/Sqr-va-logo.png?raw=true");
-      background-size:contain;
-background-repeat:no-repeat;
+      justify-content: center;
+      padding: 20px;
+      box-sizing: border-box;
+      text-align: center;
+      color: var(--text-color);
+      z-index: 1;
     }
-    h1 {
+
+    .logo {
+      width: 60px;
+      height: 60px;  
+      margin-bottom: 15px;
+      background-image: url('https://github.com/anandvip/vipulAnand/blob/main/Sqr-va-logo.png?raw=true');
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    .card h2 {
+      margin: 0 0 10px;
       font-size: 24px;
-      margin-bottom: 10px;
+      font-weight: 700;
     }
-    p {
-      font-size: 18px;
-      margin-bottom: 5px;
+
+    .card p {
+      margin: 5px 0;
+      font-size: 14px;
+      font-weight: 400;
+    }
+
+    @keyframes rotate {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(-360deg); }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="logo"></div>
-    <h1>Vipul Anand</h1>
-    <p>Freelance Web Developer</p>
-    <p>Living in Kurukshetra</p>
-    <p>Contact: 9896918475</p>
-    <p>Email: 9896918475V@gmail.com</p>
+  <div class="card-container">
+    <div class="edge-highlight"></div>
+    <div class="traveling-highlight"></div>
+    <div class="card">
+      <div class="logo"></div>
+      <h2>Vipul Anand</h2>
+      <p>Freelance Web Developer</p>
+      <p>Living in Kurukshetra</p>
+      <p>Contact: +91-989-691-8475</p>
+      <p>Email: 9896918475v@gmail.com</p>
+    </div>
   </div>
 </body>
 </html>
