--- a/intro/index.html
+++ b/intro/index.html
@@ -70,7 +70,7 @@
 <body>
   <div class="hero">
     <video autoplay loop muted>
-      <source src="path/to/your/video.mp4" type="video/mp4">
+      <source src="valogo.mp4" type="video/mp4">
     </video>
     <div class="card">
       <h2>Discover our Solutions</h2>
